force-app/main/default/objects/Opportunity/fields/completed_task__c.field-meta.xml
<CustomField>
    <fullName>completed_task__c</fullName>
    <description>Number of related Tasks whose Status is Completed. Maintained by TaskTriggerHandler — the bulkified Apex rollup that replaces the DLRS managed package. Do not edit manually.</description>
    <inlineHelpText>Count of related completed Tasks. Auto-maintained by the Task rollup trigger; not user-editable.</inlineHelpText>
    <label>Completed Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>