force-app/main/default/objects/Opportunity/fields/Reseller__c.field-meta.xml
<CustomField>
    <fullName>Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Reseller__c record that sourced this Opportunity. Auto-populated by OpportunityTriggerHandler based on Reseller_Email__c. If the Reseller is deleted, this field is set to null (the Opportunity survives).</description>
    <inlineHelpText>Auto-populated by the OpportunityTrigger when the Reseller Email matches a Reseller record. Do not edit manually.</inlineHelpText>
    <label>Reseller</label>
    <referenceTo>Reseller__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>