force-app/main/default/objects/Opportunity/fields/Reseller_Email__c.field-meta.xml
<CustomField>
    <fullName>Reseller_Email__c</fullName>
    <description>Reseller company email entered by the sales rep when creating or updating the Opportunity. The OpportunityTriggerHandler matches this against Reseller__c.Company_Email__c (case-insensitive) and auto-populates the Reseller lookup. Leave blank for direct deals (no channel partner).</description>
    <inlineHelpText>Enter the channel partner's company email if this deal came through a reseller. Match is case-insensitive. Leave blank for direct deals.</inlineHelpText>
    <label>Reseller Email</label>
    <type>Email</type>
</CustomField>