force-app/main/default/objects/Opportunity/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>Total number of Tasks related to this Opportunity (every status). Maintained by TaskTriggerHandler — the bulkified Apex rollup that replaces the DLRS managed package. Do not edit manually.</description>
    <inlineHelpText>Total count of related Tasks. Auto-maintained by the Task rollup trigger; not user-editable.</inlineHelpText>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>